--- a/src/views/divisionAdminForm.ejs
+++ b/src/views/divisionAdminForm.ejs
@@ -424,6 +424,7 @@
                                                             placeholder="Porcentaje de bonificación *" 
                                                             class="form-control porcentaje_tasa"
                                                             onkeyup="bonusAmountCalculation()"
+                                                            onblur="addZeroesBonificacion()"
                                                             required
                                                         >
                                                     </div>
@@ -467,6 +468,7 @@
                                                             placeholder="ISLR *" 
                                                             class="form-control porcentaje_tasa"
                                                             onkeyup="totalCommissionCalculation()"
+                                                            onblur="addZeroesIslr()"
                                                             required
                                                         >
                                                     </div>
@@ -535,6 +537,7 @@
                                                             value="0"
                                                             class="form-control porcentaje_tasa"
                                                             onkeyup="percentageCalculation()"
+                                                            onblur="addZeroesAgente()"
                                                             required
                                                         >
                                                     </div>
@@ -551,6 +554,7 @@
                                                         placeholder="Porcentaje Caso Especial" 
                                                         class="form-control porcentaje_tasa"
                                                         onkeyup="percentageCalculation()"
+                                                        onblur="addZeroesEspecial()"
                                                     >
                                                 </div>
                                             </div>
@@ -592,7 +596,7 @@
                                                         type="text"
                                                         name="porcentaje_director_distribucion"
                                                         id="porcentaje_director_distribucion"
-                                                        value="2,5" 
+                                                        value="2,50" 
                                                         class="form-control porcentaje_tasa"
                                                         required
                                                     >
@@ -606,7 +610,7 @@
                                                         type="text"
                                                         name="porcentaje_socio_distribucion"
                                                         id="porcentaje_socio_distribucion"
-                                                        value="2,5" 
+                                                        value="2,50" 
                                                         class="form-control porcentaje_tasa"
                                                         required
                                                     >
