--- a/src/views/riskDiverseCollectiveList.ejs
+++ b/src/views/riskDiverseCollectiveList.ejs
@@ -60,7 +60,7 @@
                 </div>
                 <div class="col-sm-12 col-sm-offset-2">
                     <div class="card-body d-flex">
-                        <button class="btn btn-primary btn-sm ml-auto" id="btn_risk_diverse_list" onclick="location.href='/sistema/policies'">Continuar</button>
+                        <button class="btn btn-primary btn-sm ml-auto" id="btn_risk_diverse_list" onclick="location.href='/sistema'">Continuar</button>
                     </div>
                 </div>
             </div>
