--- a/src/views/lifePolicyList.ejs
+++ b/src/views/lifePolicyList.ejs
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col-sm-12 col-sm-offset-2">
                     <div class="card-body d-flex">
-                        <button class="btn btn-primary btn-sm ml-auto" id="btn_life_list" onclick="location.href='/sistema/policies'">Continuar</button>
+                        <button class="btn btn-primary btn-sm ml-auto" id="btn_life_list" onclick="location.href='/sistema'">Continuar</button>
                     </div>
                 </div>
             </div>
