--- a/src/views/collectives.ejs
+++ b/src/views/collectives.ejs
@@ -162,45 +162,73 @@ $(document).ready(function(){
                 "data": "",
                 "render": (data, type, row) => {
                     if (row.tipo_colectivo === 'SALUD') { 
-                        return `<form class="form-inline" method="get" action="/sistema/edit-collective-health/${row.id_colectivo}">
-                                    <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
-                                </form>`;
+                        return `<% if ([
+                                    'COORDINADOR SUSCRIPCIÓN INDIVIDUAL',
+                                    'COORDINADOR SUSCRIPCIÓN COLECTIVO',
+                                    'COORDINADOR ADMINISTRACIÓN',
+                                    'GERENTE TÉCNICO'
+                                ].includes(cookieRol)) { %>
+                                    <form class="form-inline" method="get" action="/sistema/edit-collective-health/${row.id_colectivo}">
+                                        <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
+                                    </form>
+                                <% } %>`;
                     } else if (row.tipo_colectivo === 'AUTOMÓVIL') { 
-                        return `<form class="form-inline" method="get" action="/sistema/edit-collective-vehicle/${row.id_colectivo}">
-                                    <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
-                                </form>`;
+                        return `<% if ([
+                                    'COORDINADOR SUSCRIPCIÓN INDIVIDUAL',
+                                    'COORDINADOR SUSCRIPCIÓN COLECTIVO',
+                                    'COORDINADOR ADMINISTRACIÓN',
+                                    'GERENTE TÉCNICO'
+                                ].includes(cookieRol)) { %>
+                                    <form class="form-inline" method="get" action="/sistema/edit-collective-vehicle/${row.id_colectivo}">
+                                        <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
+                                    </form>
+                                <% } %>`;
                     } else if (row.tipo_colectivo === 'RIESGOS DIVERSOS') { 
-                        return `<form class="form-inline" method="get" action="/sistema/edit-collective-risk-diverse/${row.id_colectivo}">
-                                    <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
-                                </form>`;
+                        return `<% if ([
+                                    'COORDINADOR SUSCRIPCIÓN INDIVIDUAL',
+                                    'COORDINADOR SUSCRIPCIÓN COLECTIVO',
+                                    'COORDINADOR ADMINISTRACIÓN',
+                                    'GERENTE TÉCNICO'
+                                ].includes(cookieRol)) { %>
+                                    <form class="form-inline" method="get" action="/sistema/edit-collective-risk-diverse/${row.id_colectivo}">
+                                        <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
+                                    </form>
+                                <% } %>`;
                     }
                 }
             },
             {
                 "data": "",
                 "render": (data, type, row) => {
-                        return `<form class="form-inline" method="post" action="/sistema/remove-collective/${row.id_colectivo}">
-                                    <div class="row">
-                                        <div class="col-sm-6 col-lg-12" style="padding-bottom: 10px;">
-                                            <button 
-                                                class="btn btn-danger" 
-                                                type="submit"
-                                                onclick="return confirm('¿Estás seguro de que quieres deshabilitar este registro?');"
-                                            >
-                                                <i class="fa fa-ban"></i>
-                                            </button>
-                                        </div> 
-                                        <div class="col-sm-6 col-lg-12">
-                                            <textarea 
-                                                name="obser_deshabilitar_colectivo"
-                                                id="obser_deshabilitar_colectivo" 
-                                                placeholder="Observaciones de Deshabilitar *" 
-                                                class="form-control"
-                                                oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
-                                            ></textarea>
+                        return `<% if ([
+                                    'COORDINADOR SUSCRIPCIÓN INDIVIDUAL',
+                                    'COORDINADOR SUSCRIPCIÓN COLECTIVO',
+                                    'COORDINADOR ADMINISTRACIÓN',
+                                    'GERENTE TÉCNICO'
+                                ].includes(cookieRol)) { %>
+                                    <form class="form-inline" method="post" action="/sistema/remove-collective/${row.id_colectivo}">
+                                        <div class="row">
+                                            <div class="col-sm-6 col-lg-12" style="padding-bottom: 10px;">
+                                                <button 
+                                                    class="btn btn-danger" 
+                                                    type="submit"
+                                                    onclick="return confirm('¿Estás seguro de que quieres deshabilitar este registro?');"
+                                                >
+                                                    <i class="fa fa-ban"></i>
+                                                </button>
+                                            </div> 
+                                            <div class="col-sm-6 col-lg-12">
+                                                <textarea 
+                                                    name="obser_deshabilitar_colectivo"
+                                                    id="obser_deshabilitar_colectivo" 
+                                                    placeholder="Observaciones de Deshabilitar *" 
+                                                    class="form-control"
+                                                    oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
+                                                ></textarea>
+                                            </div>
                                         </div>
-                                    </div>
-                                </form>`;
+                                    </form>
+                                <% } %>`;
                 }
             }
         ],
