--- a/src/views/editExecutive.ejs
+++ b/src/views/editExecutive.ejs
@@ -82,6 +82,7 @@
                                             <div class="col-sm-10">
                                                 <select class="form-control" name="cargo_ejecutivo" id="cargo_ejecutivo" required>
                                                     <option value="<%= executive.cargo_ejecutivo %>"><%= executive.cargo_ejecutivo %></option>
+                                                    <option value="ADMINISTRADOR">ADMINISTRADOR</option>
                                                     <option value="GERENTE">GERENTE</option>
                                                     <option value="COORDINADOR">COORDINADOR</option>
                                                     <option value="EJECUTIVO">EJECUTIVO</option>
@@ -95,6 +96,9 @@
                                             <div class="col-sm-10">
                                                 <select class="form-control" name="departamento_cargo_ejecutivo" id="departamento_cargo_ejecutivo" required>
                                                     <option value="<%= executive.departamento_cargo_ejecutivo %>"><%= executive.departamento_cargo_ejecutivo %></option>
+                                                    <optgroup label="ADMINISTRADOR" id="ADMINISTRADOR">
+                                                        <option value="DIRECTOR">DIRECTOR</option>
+                                                    </optgroup>
                                                     <optgroup label="GERENTE" id="GERENTE">
                                                         <option value="TÉCNICO">TÉCNICO</option>
                                                     </optgroup>
