--- a/src/views/executiveForm.ejs
+++ b/src/views/executiveForm.ejs
@@ -81,6 +81,7 @@
                                             <div class="col-sm-10">
                                                 <select class="form-control" name="cargo_ejecutivo" id="cargo_ejecutivo" required>
                                                     <option value="">Seleccione *</option>
+                                                    <option value="ADMINISTRADOR">ADMINISTRADOR</option>
                                                     <option value="GERENTE">GERENTE</option>
                                                     <option value="COORDINADOR">COORDINADOR</option>
                                                     <option value="EJECUTIVO">EJECUTIVO</option>
@@ -94,6 +95,9 @@
                                             <div class="col-sm-10">
                                                 <select class="form-control" name="departamento_cargo_ejecutivo" id="departamento_cargo_ejecutivo" required>
                                                     <option value="">Seleccione *</option>
+                                                    <optgroup label="ADMINISTRADOR" id="ADMINISTRADOR">
+                                                        <option value="DIRECTOR">DIRECTOR</option>
+                                                    </optgroup>
                                                     <optgroup label="GERENTE" id="GERENTE">
                                                         <option value="TÉCNICO">TÉCNICO</option>
                                                     </optgroup>
